--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 
         <!-- meet the team section starts here  -->
         <section id="team">
-            <div class="hero mb-32" style="background-image: url('./images/team.png');">
+            <div class="hero mb-16 lg:mb-32" style="background-image: url('./images/team.png');">
                 <div class="hero-overlay bg-opacity-50 bg-black"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="px-5 py-6">
@@ -922,14 +922,14 @@
             <li><a href="">Support</a></li>
             <li><a href="">My Account</a></li>
         </div>
-        <div>
-          <div class="grid grid-cols-3 md:grid-cols-6 gap-5">
-            <i class=" text-3xl cursor-pointer fa-brands fa-twitter"></i>
-            <i class=" text-3xl cursor-pointer fa-brands fa-facebook-f"></i>
-            <i class=" text-3xl cursor-pointer fa-brands fa-youtube"></i>
-            <i class=" text-3xl cursor-pointer fa-brands fa-linkedin-in"></i>
-            <i class=" text-3xl cursor-pointer fa-brands fa-instagram"></i>
-            <i class=" text-3xl cursor-pointer fa-brands fa-apple"></i>
+        <div class="-mt-4 md:mt-0">
+          <div class="grid grid-cols-3 md:grid-cols-6 gap-x-10 gap-y-4 md:gap-5">
+            <i class="text-2xl md:text-3xl cursor-pointer fa-brands fa-twitter"></i>
+            <i class="text-2xl md:text-3xl cursor-pointer fa-brands fa-facebook-f"></i>
+            <i class="text-2xl md:text-3xl cursor-pointer fa-brands fa-youtube"></i>
+            <i class="text-2xl md:text-3xl cursor-pointer fa-brands fa-linkedin-in"></i>
+            <i class="text-2xl md:text-3xl cursor-pointer fa-brands fa-instagram"></i>
+            <i class="text-2xl md:text-3xl cursor-pointer fa-brands fa-apple"></i>
           </div>
         </div>
       </footer>
